[package]
name = "ch9120"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = { version = "1.0.0", optional = true }
derive_builder = { version = "0.20.2", default-features = false }
embassy-futures = "0.1.2"
embassy-time = "0.5.1"
embedded-hal = "1.0.0"
embedded-io-async = "0.7.0"
thiserror = { version = "2.0.18", default-features = false }

[features]
defmt = ["dep:defmt", "embassy-futures/defmt", "embedded-io-async/defmt"]
